--- a/welcome.html
+++ b/welcome.html
@@ -10,7 +10,7 @@
     <h3><i>naomiakinwunmi@gmail.com</i></h3>
   </div>
   <div id = "passport">
-  <img src = "passport.png"/ style="height:100px;width:100px7ɓ((">
+  <img src = "passport.png"/ style="height:100px;width:100px">
   </div>
   <div id="pagelinks">
   <ul>
